Make InitTransaction be able to work with either authorization_request_uri or authorization_request_scheme
